# react-native-sherpa-onnx

./: LICENSE  README.md  SherpaOnnx.podspec  package.json  tsconfig.build.json
THIRD_PARTY_LICENSES/: README.md  libarchive.txt  nvidia_omla.txt
android/: build.gradle  prebuilt-download.gradle  prebuilt-versions.gradle  proguard-rules.pro
android/src/main/cpp/: CMakeLists.txt  CMakePresets.json
android/src/main/cpp/crypto/: sha256.cpp  sha256.h
android/src/main/cpp/jni/archive/: sherpa-onnx-archive-helper.cpp  sherpa-onnx-archive-helper.h  sherpa-onnx-archive-jni.cpp
android/src/main/cpp/jni/audio/: sherpa-onnx-audio-convert-jni.cpp
android/src/main/cpp/jni/model_detect/: sherpa-onnx-common.h  sherpa-onnx-detect-jni-common.cpp  sherpa-onnx-detect-jni-common.h  sherpa-onnx-enhancement-wrapper.cpp  sherpa-onnx-enhancement-wrapper.h  sherpa-onnx-model-detect-enhancement.cpp  sherpa-onnx-model-detect-helper.cpp  sherpa-onnx-model-detect-helper.h  sherpa-onnx-model-detect-stt.cpp  sherpa-onnx-model-detect-tts.cpp  sherpa-onnx-model-detect.h  sherpa-onnx-stt-wrapper.cpp  sherpa-onnx-stt-wrapper.h  sherpa-onnx-tts-wrapper.cpp  sherpa-onnx-tts-wrapper.h  sherpa-onnx-validate-enhancement.cpp  sherpa-onnx-validate-enhancement.h  sherpa-onnx-validate-stt.cpp  sherpa-onnx-validate-stt.h  sherpa-onnx-validate-tts.cpp
android/src/main/cpp/jni/module/: sherpa-onnx-module-jni.cpp
ios/: SherpaOnnx+Assets.h  SherpaOnnx+Assets.mm  SherpaOnnx+Enhancement.mm  SherpaOnnx+OnlineSTT.mm  SherpaOnnx+PcmLiveStream.mm  SherpaOnnx+STT.mm  SherpaOnnx+TTS.mm  SherpaOnnx.h  SherpaOnnx.mm  SherpaOnnx.xcconfig  SherpaOnnxAudioConvert.h  SherpaOnnxAudioConvert.mm  SherpaOnnxCoreMLHelper.swift  libarchive_darwin_config.h
ios/Resources/model_licenses/: asr-models-license-status.csv  speech-enhancement-models-license-status.csv
ios/archive/: sherpa-onnx-archive-helper.h  sherpa-onnx-archive-helper.mm
ios/enhancement/: sherpa-onnx-enhancement-wrapper.h  sherpa-onnx-enhancement-wrapper.mm
ios/model_detect/: sherpa-onnx-model-detect-enhancement.mm  sherpa-onnx-model-detect-helper.h  sherpa-onnx-model-detect-helper.mm  sherpa-onnx-model-detect-stt.mm  sherpa-onnx-model-detect-tts.mm  sherpa-onnx-model-detect.h  sherpa-onnx-validate-enhancement.mm  sherpa-onnx-validate-stt.mm  sherpa-onnx-validate-tts.h  sherpa-onnx-validate-tts.mm
ios/online_stt/: sherpa-onnx-online-stt-wrapper.h  sherpa-onnx-online-stt-wrapper.mm
ios/stt/: sherpa-onnx-stt-wrapper.h  sherpa-onnx-stt-wrapper.mm
ios/tts/: sherpa-onnx-tts-wrapper.h  sherpa-onnx-tts-wrapper.mm
lib/module/: NativeSherpaOnnx.js  NativeSherpaOnnx.js.map  index.js  index.js.map  licenses.js  licenses.js.map  utils.js  utils.js.map
lib/module/audio/: index.js  index.js.map
lib/module/diarization/: index.js  index.js.map
lib/module/download/: ModelDownloadManager.js  ModelDownloadManager.js.map  activeModelOperations.js  activeModelOperations.js.map  background-downloader-types.js  background-downloader-types.js.map  bulkPurge.js  bulkPurge.js.map  checksumPrompt.js  checksumPrompt.js.map  constants.js  constants.js.map  downloadEvents.js  downloadEvents.js.map  downloadTask.js  downloadTask.js.map  ensureModel.js  ensureModel.js.map  index.js  index.js.map  localModels.js  localModels.js.map  modelExtraction.js  modelExtraction.js.map  paths.js  paths.js.map  postDownloadProcessing.js  postDownloadProcessing.js.map  protectedModelKeys.js  protectedModelKeys.js.map  registry.js  registry.js.map  retry.js  retry.js.map  types.js  types.js.map  validation.js  validation.js.map
lib/module/enhancement/: index.js  index.js.map  streaming.js  streaming.js.map  streamingTypes.js.map  types.js  types.js.map
lib/module/extraction/: extractTarBz2.js  extractTarBz2.js.map  extractTarZst.js  extractTarZst.js.map  index.js  index.js.map  types.js.map
lib/module/separation/: index.js  index.js.map
lib/module/stt/: index.js  index.js.map  streaming.js  streaming.js.map  streamingTypes.js  streamingTypes.js.map  sttModelLanguages.js  sttModelLanguages.js.map  types.js  types.js.map
lib/module/tts/: index.js  index.js.map  streaming.js  streaming.js.map  streamingTypes.js  streamingTypes.js.map  types.js  types.js.map
lib/module/vad/: index.js  index.js.map
lib/typescript/src/: NativeSherpaOnnx.d.ts  NativeSherpaOnnx.d.ts.map  index.d.ts  index.d.ts.map  licenses.d.ts  licenses.d.ts.map  types.d.ts  types.d.ts.map  utils.d.ts  utils.d.ts.map
lib/typescript/src/audio/: index.d.ts  index.d.ts.map
lib/typescript/src/diarization/: index.d.ts  index.d.ts.map
lib/typescript/src/download/: ModelDownloadManager.d.ts  ModelDownloadManager.d.ts.map  activeModelOperations.d.ts  activeModelOperations.d.ts.map  background-downloader-types.d.ts  background-downloader-types.d.ts.map  bulkPurge.d.ts  bulkPurge.d.ts.map  checksumPrompt.d.ts  checksumPrompt.d.ts.map  constants.d.ts  (+27 more)
scripts/: check-elf-alignment.sh  setup-ios-framework.sh  switch-registry.js  update_commercial_use.js
scripts/ci/: check-model-csvs.sh  collect_all_sherpa_model_streams.sh  collect_one_sherpa_release_stream.sh  sherpa_asr_model_release_streams.json  sherpa_speech_enhancement_model_release_streams.json  sherpa_tts_model_release_streams.json  update_model_license_csv.sh
src/: NativeSherpaOnnx.ts  index.tsx  licenses.ts  types.ts  utils.ts
src/audio/: index.ts
src/diarization/: index.ts
src/download/: ModelDownloadManager.ts  activeModelOperations.ts  background-downloader-types.ts  bulkPurge.ts  checksumPrompt.ts  constants.ts  downloadEvents.ts  downloadTask.ts  ensureModel.ts  index.ts  localModels.ts  modelExtraction.ts  paths.ts  postDownloadProcessing.ts  protectedModelKeys.ts  registry.ts  retry.ts  types.ts  validation.ts
src/enhancement/: index.ts  streaming.ts  streamingTypes.ts  types.ts
src/extraction/: extractTarBz2.ts  extractTarZst.ts  index.ts  types.ts
src/separation/: index.ts
src/stt/: index.ts  streaming.ts  streamingTypes.ts  sttModelLanguages.ts  types.ts
src/tts/: index.ts  streaming.ts  streamingTypes.ts  types.ts
src/vad/: index.ts
(+50 files in other folders)
